@@ -6,6 +6,7 @@
 //$GLOBALS['phorkie']['cfg']['git']['private'] = 'ssh://git@bogo:paste/';
 //$GLOBALS['phorkie']['cfg']['elasticsearch'] = 'http://localhost:9200/phorkie/';
 //$GLOBALS['phorkie']['cfg']['setupcheck'] = false;
+//$GLOBALS['phorkie']['cfg']['perPage'] = 10;
 
 //$GLOBALS['phorkie']['auth']['securityLevel'] = 0;
 //$GLOBALS['phorkie']['auth']['listedUsersOnly'] = false;
