@@ -1,3 +1,7 @@
+2013-08-20  Justin J. Novack  <jnovack@gmail.com>
+
+	* Add perPage settings into config
+
 2013-08-20  Christian Weiske  <cweiske@cweiske.de>
 
 	* Fix bug #41: AGPL link broken
